--- a/catalogo.html
+++ b/catalogo.html
@@ -669,7 +669,7 @@
         
         <div class="imagen-container">
             <!-- Asegúrate de que la ruta de la imagen sea correcta -->
-            <img src="imagenes/librosdigitales.jpg" alt="Biblioteca digital del ISFDyT N° 15" class="imagen-biblioteca-fija">
+            <img src="Imagenes/librosdigitales.jpg" alt="Biblioteca digital del ISFDyT N° 15" class="imagen-biblioteca-fija">
         </div>
         
         <nav>
@@ -699,7 +699,7 @@
                 <div class="carrusel-item">
                     <a href="https://mega.nz/file/XkY3hLAb#piLsHJ4_5gwSkVwfAMN33KR8CnNvDItJ_0RPN9rE_iM" class="publicacion-card" target="_blank">
                         <div class="card-content">
-                            <img src="imagenes/publicacion_A.jpg" alt="TP N°3 Documentación" class="card-image">
+                            <img src="Imagenes/publicacion_A.jpg" alt="TP N°3 Documentación" class="card-image">
                             <div class="card-text">
                                 <h3>TP N°3 Documentación</h3>
                                 <p>Un trabajo completo sobre técnicas de documentación aplicadas a la bibliotecología, incluyendo métodos de catalogación y organización de materiales.</p>
@@ -718,7 +718,7 @@
                 <div class="carrusel-item">
                     <a href="https://mega.nz/file/j4Ix2A7L#-g-I8VucqL1-G5JSX0_WdvwyvkBH5KQojbqxT6XPPNo" class="publicacion-card" target="_blank">
                         <div class="card-content">
-                            <img src="imagenes/publicacion_B.jpg" alt="TP N°2 FUSEI" class="card-image">
+                            <img src="Imagenes/publicacion_B.jpg" alt="TP N°2 FUSEI" class="card-image">
                             <div class="card-text">
                                 <h3>TP N°2 FUSEI</h3>
                                 <p>Análisis del sistema de gestión bibliotecaria FUSEI, con énfasis en la implementación y optimización de recursos tecnológicos en bibliotecas.</p>
@@ -737,7 +737,7 @@
                 <div class="carrusel-item">
                     <a href="https://mega.nz/file/3lBlAR6C#bl31XfqaZCG31C2PqRN-guAGUkv-N4OtHYEXDKlFurc" class="publicacion-card" target="_blank">
                         <div class="card-content">
-                            <img src="imagenes/publicacion_C.jpg" alt="Materiales para educación especial" class="card-image">
+                            <img src="Imagenes/publicacion_C.jpg" alt="Materiales para educación especial" class="card-image">
                             <div class="card-text">
                                 <h3>Preguntas Parcial DIPRO III</h3>
                                 <p>Compilación de preguntas y respuestas para el parcial de Diseño de Proyectos III, incluyendo metodologías y casos de estudio aplicados.</p>
@@ -756,7 +756,7 @@
                 <div class="carrusel-item">
                     <a href="https://mega.nz/file/msgHAZiQ#5tkyqmLfuFXiFjEJR3Kna9RjJr-OyaB43qCWxZ0ns3c" class="publicacion-card" target="_blank">
                         <div class="card-content">
-                            <img src="imagenes/publicacion_D.jpg" alt="Tecnología aplicada a la educación" class="card-image">
+                            <img src="Imagenes/publicacion_D.jpg" alt="Tecnología aplicada a la educación" class="card-image">
                             <div class="card-text">
                                 <h3>Trabajo Final Proyecto Biblioteca PLAPI</h3>
                                 <p>Proyecto integral de implementación de una biblioteca PLAPI (Plataforma de Acceso a la Información) con enfoque en accesibilidad y recursos digitales.</p>
@@ -926,4 +926,5 @@
         });
     </script>
 </body>
+
 </html>
